--- a/LKWT_webstorm/wrapper.html
+++ b/LKWT_webstorm/wrapper.html
@@ -13,6 +13,9 @@
     <link href="css/vendor/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
+    <!-- icon -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+
     <!-- Custom styles for this template -->
     <link href="css/sb-admin-2.min.css" rel="stylesheet">
 
@@ -30,7 +33,7 @@
 
         <!-- Divider -->
         <hr class="sidebar-divider my-0">
-        <p>알림</p>
+            <p>알림</p>
         <hr class="sidebar-divider my-0">
 
         <!-- Nav Item - Dashboard -->
